# cabasa

./: .gitignore  BUILDING.md  LICENSE  README.md  cabasa.cabal  stack.yaml
Patterns/: gates.mcl  langton.mcl  pi.mcl  r.mcl
Rules/: bbrain.alp  langton.hs  life.alp  life.hs  wireworld.alp
app/: Canvas.hs  Common.hs  ControlButtons.hs  Handlers.hs  Hint.hs  Main.hs  Menu.hs  Paths_cabasa.hs  SetRuleWindow.hs  Settings.hs  SettingsDialog.hs  ShowDialog.hs  StylesheetWindow.hs  Types.hs  Utils.hs
app/Control/Monad/: App.hs
app/Control/Monad/App/: Class.hs
app/Types/: Application.hs
data/: cabasa.css  cabasa.glade
data/Patterns/: test.mcl
data/Rules/: carpet.alp  yinyang.alp
data/doc/: UserManual.adoc  UserManual.tex
data/doc/haskell/: CA-ALPACA-Parse.html  CA-ALPACA-Run.html  CA-ALPACA.html  CA-Format-MCell.html  CA-Internal.html  CA-Utils.html  CA.html  Hint-Interop.html  doc-index-36.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-64.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Y.html  doc-index-Z.html  doc-index.html  (+1 more)
hint-interop/Hint/: Interop.hs
src/: Cabasa.hs
src/Cabasa/: Canvas.hs  ControlButtons.hs  Handlers.hs  Menu.hs  ShowDialog.hs  Types.hs
src/Cabasa/Types/: Application.hs
src/Control/Monad/: App.hs
src/Control/Monad/App/: Class.hs
