name:                cabasa
version:             0.1.0.0
synopsis:            A generic cellular automaton simulator.
-- description:
-- homepage:            https://github.com/githubuser/cabasa#readme
license:             MIT
license-file:        LICENSE
author:              Brad Neimann
copyright:           2017 Brad Neimann
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md
data-files:          data/cabasa.glade
                   , data/cabasa.css
                   , data/doc/UserManual.pdf

library
  -- from https://making.pusher.com/top-tips-and-tools-for-optimising-haskell/
  ghc-options:         -Wall -threaded -funfolding-use-threshold=16 -O2 -optc-O3
  exposed-modules:     Hint.Interop
  hs-source-dirs:      hint-interop
  build-depends:       base >= 4.7  && < 5
                     , cellular-automata

executable cabasa
  -- from https://making.pusher.com/top-tips-and-tools-for-optimising-haskell/
  ghc-options:         -Wall -threaded -funfolding-use-threshold=16 -O2 -optc-O3
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_cabasa
                     , Canvas
                     , Common
                     , ControlButtons
                     , Hint
                     , Menu
                     , Types
                     , SetRuleWindow
                     , StylesheetWindow
  default-language:    Haskell2010
  build-depends:       base             >= 4.7  && < 5
                     , cabasa
                     , cellular-automata
                     , cairo            >= 0.13 && < 0.14
                     , comonad          >= 5.0  && < 5.1
                     , directory        >= 1.3  && < 1.4
                     , filepath         >= 1.4  && < 1.5
                     , finite-typelits  >= 0.1  && < 0.2
                     , gtk3             >= 0.14 && < 0.15
                     , hint             >= 0.7  && < 0.9
                     , microlens        >= 0.4  && < 0.5
                     , microlens-th     >= 0.4  && < 0.5
                     , process          >= 1.6  && < 1.7
                     , split            >= 0.2  && < 0.3
                     , template-haskell >= 2.12 && < 2.14
                     , temporary        >= 1.2  && < 1.4
                     , text             >= 1.2  && < 1.3
