name:                cabasa
version:             0.1.0.0
synopsis:            A generic cellular automaton simulator.
description:
    Cabasa is an application which allows the simulation of arbitrary 2D
    cellular automata.  It allows cellular automata to be written in
    either of Chris Pressey's ALPACA language or the Haskell programming
    language, providing significant flexibility.
category:            Graphics, Math, Automata, GUI
homepage:            https://github.com/bradrn/cabasa
license:             MIT
license-file:        LICENSE
author:              Brad Neimann
copyright:           (c) 2017-2019 Brad Neimann
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          data/cabasa.glade
                   , data/cabasa.css
                   , data/doc/UserManual.pdf

library
  -- from https://making.pusher.com/top-tips-and-tools-for-optimising-haskell/
  ghc-options:         -Wall -threaded -funfolding-use-threshold=16 -O2 -optc-O3
  hs-source-dirs:      src
  exposed-modules:     Cabasa
                     , Cabasa.Types
  other-modules:       Paths_cabasa
                     , Cabasa.Canvas
                     , Cabasa.ControlButtons
                     , Cabasa.Handlers
                     , Cabasa.Menu
                     , Cabasa.Types.Application
                     , Cabasa.ShowDialog
                     , Control.Monad.App
                     , Control.Monad.App.Class
  default-language:    Haskell2010
  build-depends:       base             >= 4.7  && < 5
                     , cellular-automata
                     , cellular-automata-alpaca
                     , aeson            >= 1.3  && < 1.5
                     , array            >= 0.5  && < 0.6
                     , cairo            >= 0.13 && < 0.14
                     , directory        >= 1.3  && < 1.4
                     , deepseq          >= 1.4  && < 1.5
                     , filepath         >= 1.4  && < 1.5
                     , finite-typelits  >= 0.1  && < 0.2
                     , gi-cairo         >= 1.0  && < 1.1
                     , gi-gdk           >= 3.0  && < 3.1
                     , gi-gtk           >= 3.0  && < 3.1
                     , gi-gtk-hs        >= 0.3  && < 0.4
                     , haskell-gi-base  >= 0.21 && < 0.24
                     , microlens        >= 0.4  && < 0.5
                     , microlens-th     >= 0.4  && < 0.5
                     , microlens-mtl    >= 0.2  && < 0.3
                     , MonadRandom      >= 0.5  && < 0.6
                     , mtl              >= 2.2  && < 2.3
                     , process          >= 1.6  && < 1.7
                     , split            >= 0.2  && < 0.3
                     , text             >= 1.2  && < 1.3
                     , template-haskell >= 2.12 && < 2.16
                     , temporary        >= 1.2  && < 1.4
                     , text             >= 1.2  && < 1.3
                     , transformers     >= 0.5  && < 0.6
                     , yaml             >= 0.8  && < 0.12
